// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RegistrationForm /> renders a form with dynamic fields 1`] = `
<form
  id="registration-form"
  onSubmit={[MockFunction]}
>
  <Field
    component={[Function]}
    id="username"
    label={
      <FormattedMessage
        id="registration.username"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="username"
    type="text"
  />
  <Field
    component={[Function]}
    id="email"
    label={
      <FormattedMessage
        id="global.email"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="email"
    popover={
      Object {
        "id": "registration-email-tooltip",
        "message": <FormattedMessage
          id="registration.tooltip.email"
          values={Object {}}
        />,
      }
    }
    type="email"
  />
  <Field
    component={[Function]}
    id="password"
    label={
      <FormattedMessage
        id="registration.password"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="plainPassword"
    popover={
      Object {
        "id": "registration-password-tooltip",
        "message": <FormattedMessage
          id="registration.tooltip.password"
          values={Object {}}
        />,
      }
    }
    type="password"
  />
  <Field
    component={[Function]}
    id="dynamic-6"
    key="0"
    label={
      <span>
        Champ pas facultatif
         
      </span>
    }
    labelClassName="font-weight-normal"
    name="dynamic-6"
    type="text"
  />
  <Field
    component={[Function]}
    id="charte"
    labelClassName="font-weight-normal"
    name="charte"
    type="checkbox"
  >
    <FormattedMessage
      id="registration.charte"
      values={
        Object {
          "link": <a
            className="external-link"
            href="/charte"
          >
            la charte
          </a>,
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="consent-external-communication"
    labelClassName="font-weight-normal"
    name="consentExternalCommunication"
    type="checkbox"
  >
    <FormattedMessage
      id="registration.consent_external_communication"
      values={
        Object {
          "organization_name": "Cap Collectif",
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="captcha"
    name="captcha"
    type="captcha"
  />
</form>
`;

exports[`<RegistrationForm /> renders a form with inputs and a captcha 1`] = `
<form
  id="registration-form"
  onSubmit={[MockFunction]}
>
  <Field
    component={[Function]}
    id="username"
    label={
      <FormattedMessage
        id="registration.username"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="username"
    type="text"
  />
  <Field
    component={[Function]}
    id="email"
    label={
      <FormattedMessage
        id="global.email"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="email"
    popover={
      Object {
        "id": "registration-email-tooltip",
        "message": <FormattedMessage
          id="registration.tooltip.email"
          values={Object {}}
        />,
      }
    }
    type="email"
  />
  <Field
    component={[Function]}
    id="password"
    label={
      <FormattedMessage
        id="registration.password"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="plainPassword"
    popover={
      Object {
        "id": "registration-password-tooltip",
        "message": <FormattedMessage
          id="registration.tooltip.password"
          values={Object {}}
        />,
      }
    }
    type="password"
  />
  <Field
    component={[Function]}
    id="charte"
    labelClassName="font-weight-normal"
    name="charte"
    type="checkbox"
  >
    <FormattedMessage
      id="registration.charte"
      values={
        Object {
          "link": <a
            className="external-link"
            href="/charte"
          >
            la charte
          </a>,
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="consent-external-communication"
    labelClassName="font-weight-normal"
    name="consentExternalCommunication"
    type="checkbox"
  >
    <FormattedMessage
      id="registration.consent_external_communication"
      values={
        Object {
          "organization_name": "Cap Collectif",
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="captcha"
    name="captcha"
    type="captcha"
  />
</form>
`;

exports[`<RegistrationForm /> renders a form with user_type select if enabled 1`] = `
<form
  id="registration-form"
  onSubmit={[MockFunction]}
>
  <Field
    component={[Function]}
    id="username"
    label={
      <FormattedMessage
        id="registration.username"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="username"
    type="text"
  />
  <Field
    component={[Function]}
    id="email"
    label={
      <FormattedMessage
        id="global.email"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="email"
    popover={
      Object {
        "id": "registration-email-tooltip",
        "message": <FormattedMessage
          id="registration.tooltip.email"
          values={Object {}}
        />,
      }
    }
    type="email"
  />
  <Field
    component={[Function]}
    id="password"
    label={
      <FormattedMessage
        id="registration.password"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="plainPassword"
    popover={
      Object {
        "id": "registration-password-tooltip",
        "message": <FormattedMessage
          id="registration.tooltip.password"
          values={Object {}}
        />,
      }
    }
    type="password"
  />
  <Field
    component={[Function]}
    id="user_type"
    label={
      <span>
        <FormattedMessage
          id="registration.type"
          values={Object {}}
        />
         
        <span
          className="excerpt"
        >
          <FormattedMessage
            id="global.form.optional"
            values={Object {}}
          />
        </span>
      </span>
    }
    labelClassName="font-weight-normal"
    name="userType"
    type="select"
  >
    <FormattedMessage
      id="registration.select.type"
      values={Object {}}
    />
    <option
      key="1"
      value={1}
    >
      type_1
    </option>
  </Field>
  <Field
    component={[Function]}
    id="charte"
    labelClassName="font-weight-normal"
    name="charte"
    type="checkbox"
  >
    <FormattedMessage
      id="registration.charte"
      values={
        Object {
          "link": <a
            className="external-link"
            href="/charte"
          >
            la charte
          </a>,
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="consent-external-communication"
    labelClassName="font-weight-normal"
    name="consentExternalCommunication"
    type="checkbox"
  >
    <FormattedMessage
      id="registration.consent_external_communication"
      values={
        Object {
          "organization_name": "Cap Collectif",
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="captcha"
    name="captcha"
    type="captcha"
  />
</form>
`;

exports[`<RegistrationForm /> renders a form with zipcode if enabled 1`] = `
<form
  id="registration-form"
  onSubmit={[MockFunction]}
>
  <Field
    component={[Function]}
    id="username"
    label={
      <FormattedMessage
        id="registration.username"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="username"
    type="text"
  />
  <Field
    component={[Function]}
    id="email"
    label={
      <FormattedMessage
        id="global.email"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="email"
    popover={
      Object {
        "id": "registration-email-tooltip",
        "message": <FormattedMessage
          id="registration.tooltip.email"
          values={Object {}}
        />,
      }
    }
    type="email"
  />
  <Field
    component={[Function]}
    id="password"
    label={
      <FormattedMessage
        id="registration.password"
        values={Object {}}
      />
    }
    labelClassName="font-weight-normal"
    name="plainPassword"
    popover={
      Object {
        "id": "registration-password-tooltip",
        "message": <FormattedMessage
          id="registration.tooltip.password"
          values={Object {}}
        />,
      }
    }
    type="password"
  />
  <Field
    autoComplete="postal-code"
    component={[Function]}
    id="zipcode"
    label={
      <span>
        <FormattedMessage
          id="registration.zipcode"
          values={Object {}}
        />
         
        <span
          className="excerpt"
        >
          <FormattedMessage
            id="global.form.optional"
            values={Object {}}
          />
        </span>
      </span>
    }
    labelClassName="font-weight-normal"
    name="zipcode"
    type="text"
  />
  <Field
    component={[Function]}
    id="charte"
    labelClassName="font-weight-normal"
    name="charte"
    type="checkbox"
  >
    <FormattedMessage
      id="registration.charte"
      values={
        Object {
          "link": <a
            className="external-link"
            href="/charte"
          >
            la charte
          </a>,
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="consent-external-communication"
    labelClassName="font-weight-normal"
    name="consentExternalCommunication"
    type="checkbox"
  >
    <FormattedMessage
      id="registration.consent_external_communication"
      values={
        Object {
          "organization_name": "Cap Collectif",
        }
      }
    />
  </Field>
  <Field
    component={[Function]}
    id="captcha"
    name="captcha"
    type="captcha"
  />
</form>
`;
